# Napaxi

./: .editorconfig  .gitattributes  .gitignore  .napaxi-frb-codegen.yaml  AGENTS.md  CHANGELOG.md  CLA.md  CLA.zh-CN.md  CLAUDE.md  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.zh-CN.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  Cargo.toml  LEGAL.zh-CN.md  LICENSE  NOTICE  README.md  README.zh-CN.md  RELEASING.md  RELEASING.zh-CN.md  SECURITY.md  SECURITY.zh-CN.md  THIRD-PARTY-LICENSES.md  THIRD-PARTY-LICENSES.zh-CN.md  deny.toml  flutter_rust_bridge.yaml  rustfmt.toml
crates/core/: Cargo.toml
crates/core/benches/: core_hot_path.rs
crates/core/proptest-regressions/llm/: output_cap.txt
crates/core/src/: agent_definitions.rs  error.rs  human_loop.rs  lib.rs  net.rs  platform_capabilities.rs  scene_prompt.rs
crates/core/src/a2a/: local.rs  local_pairing_contract.rs  mod.rs  signing.rs  store.rs  tests.rs  types.rs
crates/core/src/agent_engine/: mod.rs
crates/core/src/agent_runtime/: mod.rs  runs.rs
crates/core/src/agents/: mod.rs
crates/core/src/agents/agent_app/: mod.rs  persistence.rs  signing.rs  tests.rs  types.rs
crates/core/src/api/: a2a.rs  agent.rs  agent_app.rs  agent_engine.rs  automation.rs  capability.rs  channel.rs  channel_agent.rs  channel_qqbot.rs  chat.rs  engine.rs  error.rs  events.rs  evolution.rs  file_bridge.rs  git.rs  group.rs  mcp.rs  mod.rs  platform.rs  session.rs  session_runs.rs  skill.rs  skill_catalog.rs  tools.rs  wire.rs  workspace.rs
crates/core/src/automation/: handles.rs  mod.rs  runner.rs  store.rs  tests.rs  types.rs
crates/core/src/capabilities/: admission.rs  decisions.rs  definitions.rs  hooks.rs  mod.rs  resolve.rs  scenarios.rs  tests.rs  types.rs
crates/core/src/channel/: mod.rs  tests.rs
crates/core/src/channel/qqbot/: gateway.rs  gateway_tests.rs  mod.rs  protocol.rs  tests.rs
crates/core/src/channel_agent/: media.rs  mod.rs  state.rs  tests.rs  text.rs
crates/core/src/context/: budget.rs  compaction.rs  display.rs  mod.rs  resolver.rs  state.rs  tests.rs
crates/core/src/crypto/: mod.rs
crates/core/src/evolution/: curator.rs  executor.rs  mod.rs  pending_api.rs  queue.rs  review.rs  skill_consolidation.rs  store.rs
crates/core/src/group/: coordinator.rs  crud.rs  delegate.rs  export.rs  handles.rs  messages.rs  mod.rs  state.rs  tests.rs  tools.rs  types.rs
crates/core/src/llm/: anthropic.rs  cache_policy.rs  dispatch.rs  gemini.rs  http.rs  messages.rs  mod.rs  openai_compatible.rs  output_cap.rs  provider.rs  replay_tests.rs  sse.rs  tests.rs  tool_schema.rs  usage.rs
crates/core/src/llm/sse/: tests.rs
crates/core/src/mcp/: handles.rs  headers.rs  helpers.rs  mod.rs  oauth.rs  oauth_flow.rs  security.rs  servers.rs  store.rs  tests.rs  tool_descriptor.rs  tools.rs  transport.rs  types.rs
crates/core/src/platform/: android_assets.rs  android_linux_env.rs  ios_ish_env.rs
crates/core/src/platform/android_linux_env/: pty.rs
crates/core/src/runtime/: agents.rs  capability_api.rs  engine.rs  handle.rs  messaging.rs  mod.rs  session_runtime.rs  sessions.rs  tests.rs  tool_context.rs
crates/core/src/session/: history.rs  lifecycle.rs  mod.rs  mutation.rs  store.rs  tests.rs  types.rs
crates/core/src/skills/: afs.rs  bundled.rs  catalog.rs  commands.rs  config.rs  curator.rs  install.rs  lifecycle.rs  limits.rs  mod.rs  paths.rs  private_skill.rs  prompt.rs  remediation.rs  secrets.rs  session.rs  skill_load.rs  snapshots.rs  source_registry.rs  status.rs  tests.rs  types.rs  usage.rs
crates/core/src/skills/bundled_seeds/code-helper/: SKILL.md
crates/core/src/skills/bundled_seeds/daily-planner/: SKILL.md
crates/core/src/skills/bundled_seeds/summarizer/: SKILL.md
crates/core/src/skills/bundled_seeds/translator/: SKILL.md
crates/core/src/skills/bundled_seeds/web-researcher/: SKILL.md
crates/core/src/storage/: atomic.rs  attachments.rs  bridge.rs  filesystem.rs  handles.rs  mime.rs  mod.rs  tests.rs
crates/core/src/tools/: browser.rs  http.rs  loop.rs  media.rs  memory.rs  skill.rs  web_fetch.rs  web_search.rs
crates/core/src/tools/builtin/: handlers.rs  mcp.rs  mod.rs  shell.rs  shell_inject.rs  shell_policy.rs  shell_safe.rs  shell_util.rs  tests.rs
crates/core/src/tools/file/: descriptors.rs  mod.rs  paths.rs  progress.rs  read.rs  tests.rs
crates/core/src/tools/file/apply_patch/: apply.rs  (+5 more)
crates/core/src/tools/loop/: descriptors.rs  execution.rs  limits.rs  runtime.rs  runtime_tests.rs  tests.rs  trace.rs  types.rs
crates/core/src/tools/registry/: bridge.rs  mod.rs  pending.rs  prepare.rs  rate_limit.rs  redact.rs  registry.rs  tests.rs  types.rs
crates/core/src/turn/: attachments.rs  diagnostics.rs  finalize.rs  history.rs  integration_tests.rs  mod.rs  prepare.rs  prompt.rs  tests.rs
crates/core/src/turn/orchestration/: collected.rs  mod.rs  streaming.rs
crates/core/src/types/: mobile.rs
crates/core/src/workspace/: files.rs  journal.rs  meta.rs  mod.rs  paths.rs  profile.rs  prompt.rs  reseed.rs  search.rs  tests.rs  types.rs
crates/core/src/workspace/recall/: corpus.rs  index.rs  mod.rs  sql.rs  worker.rs
crates/core/src/workspace/seeds/: AGENTS.md  BOOTSTRAP.md  HEARTBEAT.md  PROJECT.md  README.md  USER.md
crates/core/tests/: integration_api_contract.rs
crates/features/evolution/: Cargo.toml
crates/features/evolution/prompts/: combined_review.md  memory_review.md  skill_review.md
crates/features/evolution/src/: config.rs  counter.rs  error.rs  fuzzy.rs  hook.rs  io.rs  lib.rs  queue.rs  rollback.rs  traits.rs  types.rs
crates/features/evolution/src/job/: aggregator.rs  helpers.rs  llm_integration.rs  mod.rs  tests.rs
crates/features/evolution/src/tools/: mod.rs  tests.rs
crates/features/skills/: Cargo.toml
crates/features/skills/src/: afs_traits.rs  gating.rs  lib.rs  parser.rs  security.rs  validation.rs
crates/features/skills/src/catalog/: mod.rs  tests.rs
crates/features/skills/src/registry/: discovery.rs  install.rs  mod.rs  tests.rs
crates/features/skills/src/selector/: mod.rs  tests.rs
crates/features/skills/src/types/: mod.rs  tests.rs
(+238 files in other folders)
