[package]
name = "napaxi_skills"
version = "1.0.0"
edition = "2024"
rust-version = "1.92"
description = "Skill selection, scoring, and management for Napaxi."
authors = ["Napaxi Contributors"]
license = "GPL-3.0-or-later"
homepage = "https://github.com/napaxi/napaxi"
repository = "https://github.com/napaxi/napaxi"
readme = "../../../README.md"
keywords = ["napaxi", "agent", "skill", "registry"]
categories = ["api-bindings"]

[package.metadata.dist]
dist = false

[features]
default = ["registry", "catalog"]
registry = ["dep:tempfile"]
catalog = ["dep:reqwest", "dep:urlencoding", "dep:futures"]
security-scan = []

[lints]
workspace = true

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_norway = "0.9.42"
sha2 = "0.11"
thiserror = "2"
tokio = { version = "1", features = ["sync", "process", "fs"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
parking_lot = { version = "0.12" }


# Optional (catalog feature)
futures = { version = "0.3", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots"], optional = true }
urlencoding = { version = "2", optional = true }

# Optional (registry feature — tempfile needed for dev-dep in tests, but also
# the registry module itself uses no extra deps beyond tokio::fs)
tempfile = { version = "3", optional = true }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full"] }
